2014-04-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info.h [HANDLE_MAN_PAGES]: #define removed.  All
	usages updated.

	* info/man.c (get_manpage_node): Use correct variable.

	* info/nodes.c (info_load_file, get_node_length): Declared static.

	* info/session.c (nearest_xref): Unused function deleted.

	* info/dir.c (maybe_create_dir_node, dir_node, create_dir_buffer)
	(build_dir_node): maybe_create_dir_node split up and behaviour
	changed.
	(dir_buffer): New file-level variable.
	(insert_text_into_fb_at_binding, insert_text_into_node): Renamed
	and arguments changed.
	(add_menu_to_file_buffer, add_menu_to_node): Renamed and arguments
	changed.
	* info/nodes.c (info_find_file_internal): Special treatment of
	dir file buffers removed.
	(info_get_node_with_defaults): Call dir_node to get dir node.

2014-04-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (info_parse_node): Don't use saven_filename
	or saven_nodename.
	(parsed_filename_size, parsed_nodename_size)
	(save_filename, saven_filename, save_nodename, saven_nodename)
	(save_string, saven_string): Functions and variables deleted.

	* info/info-utils.c (scan_reference_target): Better
	output for target specifications.

	* info/nodes.c (info_get_node_with_defaults): Always free data
	on exit.  Eliminate extra check for if we were looking for a man
	page.

2014-04-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/man.c: (get_manpage_node): Arguments changed.  Do not
	keep all the man page contents in one long buffer.
	(manpage_file_buffer): New variable.
	(create_manpage_file_buffer): Initialize manpage_file_buffer.
	(make_manpage_node): Function deleted.
	(manpage_node_of_file_buffer): Merged into get_manpage_node.
	(locate_manpage_xref, xrefs_of_manpage)
	(manpage_xrefs_in_binding, create_manpage_file_buffer): Functions
	declared static.

	* info/nodes.c (info_find_file_internal)
	(info_reload_file_buffer_contents, info_get_node_of_file_buffer):